packages/lustre-v6.6.103.3/test/should_fail/syntax/old_style_and_pack.lus
 

package toto

provides
  node titi(x:int) returns (y:int);

body

  node titi(x:int) returns (y:int);
  let
    y = x + 2;
  tel
end


node main(x:int) returns (y:int);
  let
    y = toto: : titi(x);
  tel